# Signature

./: CMakeLists.txt  README.md  main.cpp  signature_maker.cpp  signature_maker.hpp  signature_thread.cpp  signature_thread.hpp  task_queue.cpp  task_queue.hpp  thread_pool.cpp  thread_pool.hpp
.github/workflows/: Ubuntu-latest.yml  Ubuntu.yml  cmake.yml
common/: types.hpp
